Fix lightbox on mobile Safari

--- a/src/client/app/components/Popup/styles.css
+++ b/src/client/app/components/Popup/styles.css
@@ -20,6 +20,8 @@
 
 .Lightbox {
   position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
